--- a/angular/src/app/main/checklist/checklist.component.html
+++ b/angular/src/app/main/checklist/checklist.component.html
@@ -193,7 +193,7 @@
                                                                 (change)="changeToggleValue()">
                                                             <span></span>
                                                         </label>
-                                                        Show Deleted
+                                                        {{"Show Deleted" | localize}}
                                                     </div>
                                                 </div>
                                             </th>
