--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -95,7 +95,7 @@
                                                         <input  type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()">
                                                         <span></span>
                                                     </label>
-                                                    Show Deleted 
+                                                    {{"Show Deleted" | localize}} 
                                                 </div>
                                             </div>
                                         </th>
