--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -111,7 +111,7 @@
                                                         <input  type="checkbox" [(checked)]="AllOrActive"  (change)="changeToggleValue()">
                                                         <span></span>
                                                     </label>
-                                                    Show Deleted 
+                                                    {{"Show Deleted" | localize}}
                                                 </div>
                                             </div>
                                         </th>
