--- a/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/accountsubtype.component.html
@@ -70,8 +70,7 @@
                                         </th>
 
 
-                                        <th
-                                            [hidden]="!(['Pages.Categories.Edit', 'Pages.Categories.Delete'] | permissionAny)">
+                                        <th  *ngIf="actionButtonPermission && monthStatus" >
                                             {{"Actions" | localize}}</th>
                                     </tr>
 
@@ -113,8 +112,7 @@
                                                 </div>
                                             </span>
                                         </td>
-                                        <td
-                                            [hidden]="!(['Pages.Categories.Edit', 'Pages.Categories.Delete'] | permissionAny)">
+                                        <td  *ngIf="actionButtonPermission && monthStatus" >
                                             <div class="btn-group">
 
                                                 <a *ngIf="'Pages.Categories.Edit' | permission" class="btn"
