Editor UI updated

--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -110,9 +110,9 @@
 
                                 <div [ngClass]="{'disabled':!monthStatus}" class="form-group" >
                                     <label>{{"Comments" | localize}}</label>       
-                                    <div class="border-left border-right border-bottom rounded">
+                                    <div >
                                         <p-editor [(ngModel)]="comment" name="HtmlEditorInput" 
-                                                        [style]="{'height':'230px','border':'none'}">
+                                                        [style]="{'height':'230px'}">
                                                             <p-header>
                                                                 <span class="ql-formats">
                                                                     <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
