--- a/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/create-edit-itemized/create-edit-itemized.component.html
@@ -95,9 +95,9 @@
 
                                 <div class="form-group" >
                                     <label>{{"Comments" | localize}}</label>
-                                    <div class="border-left border-bottom border-right rounded">
+                                    <div>
                                         <p-editor [(ngModel)]="itemizedDto.commentBody" name="HtmlEditorInput" 
-                                            [style]="{'height':'230px','border':'none'}">
+                                            [style]="{'height':'230px'}">
                                             <p-header>
                                                 <span class="ql-formats">
                                                     <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
