--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -195,9 +195,9 @@
 
                                     <div class="form-group">
                                         <label class="bg-color">{{"Instruction" | localize}}</label>
-                                        <div class="border-left border-bottom border-right rounded">
+                                        <div>
                                             <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput" 
-                                                [style]="{'height':'230px','border':'none'}">
+                                                [style]="{'height':'230px'}">
                                                 <p-header>
                                                     <span class="ql-formats">
                                                         <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
