--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -110,9 +110,9 @@
 
                             <div class="form-group ">
                                 <label>{{"Comments" | localize}}</label>
-                                    <div class="border-left border-bottom border-right rounded">
+                                    <div>
                                             <p-editor [disabled]="!taskDetailObject.monthStatus" [(ngModel)]="comment.body" name="" 
-                                            [style]="{'height':'230px','border':'none'}">
+                                            [style]="{'height':'230px'}">
                                             <p-header>
                                                 <span class="ql-formats">
                                                     <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
