--- a/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized-details/itemized-details.component.html
@@ -94,9 +94,9 @@
 
                                 <div class="form-group " [ngClass]="{'disabled':!monthStatus}">
                                     <label>{{"Comments" | localize}}</label>
-                                       <div class="border-left border-bottom border-right rounded">
+                                       <div >
                                             <p-editor [(ngModel)]="comment" name="HtmlEditorInput" 
-                                                [style]="{'height':'230px','border':'none'}">
+                                                [style]="{'height':'230px'}">
                                                 <p-header>
                                                     <span class="ql-formats">
                                                         <select class="ql-size" data-toggle="tooltip" title="Font Size"style="width:75px">
