--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -39,16 +39,6 @@
 
                             </div>
                             
-                            <h5 class="text-navyblue">{{"Instruction" | localize}} </h5>
-                            <div class="row" *ngIf="taskDetailObject.instructionBody == null">
-                            </div>
-
-                            <div class="row" *ngIf="taskDetailObject.instructionBody != null">
-                                <div class="col-md-12">
-
-                                    <div class="custom-text-area" innerHTML="{{taskDetailObject.instructionBody}} "></div>
-                                </div>
-                            </div>
                         </div>
                         <div class="col-md-5">
                             <div class="row">
@@ -78,6 +68,19 @@
 
 
 
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-md-12 shadow-sm my-3">
+                            <h5 class="text-navyblue">{{"Instruction" | localize}} </h5>
+                            <div class="row" *ngIf="taskDetailObject.instructionBody == null">
+                            </div>
+
+                            <div class="row" *ngIf="taskDetailObject.instructionBody != null">
+                                <div class="col-md-12">
+
+                                    <div class="custom-text-area" innerHTML="{{taskDetailObject.instructionBody}} "></div>
                                 </div>
                             </div>
                         </div>
@@ -184,7 +187,7 @@
                     </div>
                     
                     <div class="row">
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                             <div class="activity-box">
                                 <h5>{{"Activity" | localize}}</h5>
                             </div>
