Setting UI changed

--- a/angular/src/app/admin/settings/host-settings.component.html
+++ b/angular/src/app/admin/settings/host-settings.component.html
@@ -30,7 +30,7 @@
                                     defaultTimezoneScope="{{defaultTimezoneScope}}"></timezone-combo>
                             </div>
                         </tab>
-                        <div *ngIf="true">
+                        <!-- <div *ngIf="true">
                             <tab heading="{{'TenantManagement' | localize}}" *ngIf="hostSettings.tenantManagement">
                                 <div class="kt-form">
                                     <h5>{{"FormBasedRegistration" | localize}}</h5>
@@ -366,9 +366,9 @@
                                     </div>
                                 </div>
                             </tab>
-                            <tab *ngIf="true" heading="{{'Invoice' | localize}}">
+                            <tab *ngIf="true" heading="{{'Invoice' | localize}}">-->
                                 <!-- *ngIf="true" is a workaround for https://github.com/valor-software/ng2-bootstrap/issues/823 -->
-                                <h5>{{"InvoiceInformation" | localize}}</h5>
+                               <!-- <h5>{{"InvoiceInformation" | localize}}</h5>
                                 <div class="form-group">
                                     <label for="LegalName">{{"LegalName" | localize}}</label>
                                     <input id="LegalName" autocomplete="off"type="text" name="legalName" class="form-control"
@@ -394,7 +394,7 @@
                                     </label>
                                 </div>
                             </tab>
-                        </div>
+                        </div> -->
                    
                     </tabset>
                 </div>
