Create button UI fixed

--- a/angular/src/app/admin/tenants/tenants.component.html
+++ b/angular/src/app/admin/tenants/tenants.component.html
@@ -189,7 +189,7 @@
                                         </td>
                                         <td>
                                             <span class="ui-column-title">{{'CreationTime' | localize}}</span>
-                                            {{record.creationTime | momentFormat:'MM DD YYYY'}}
+                                            {{record.creationTime | momentFormat:'MM/DD/YYYY'}}
                                         </td>
                                     </tr>
                                 </ng-template>
