--- a/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
+++ b/angular/src/app/main/categories/create-or-edit-category/create-or-edit-category.component.html
@@ -41,7 +41,7 @@
                         <div class="kt-portlet__head">
                         </div>
                         <div class="form-group margin-top-5">
-                            <button class="btn btn-brand btn-width" type="submit" [disabled]="categoryFormRef.form.invalid" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
+                            <button class="btn btn-brand btn-width" type="submit" [disabled]="categoryFormRef.form.invalid || isCategoryExist" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
                                 <i class="fa fa-save"></i>
                                 <span>{{"Save" | localize}}</span>
                             </button>
