--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -125,21 +125,25 @@
                                                 {{"Account No" | localize}}
                                                 <p-sortIcon field="AccountNumber"></p-sortIcon>
                                             </th>
-                                            <th class="accountName-cell" scope="col" >
+                                            <th class="accountName-cell" scope="col" pSortableColumn="AccountName">
                                                 {{"Account Name" | localize}}
+                                                <p-sortIcon field="AccountName"></p-sortIcon>
                                             </th>
                                             <th class="accountType-cell" scope="col" pSortableColumn="AccountType">
                                                 {{"Account Type" | localize}}
                                                 <p-sortIcon field="AccountType"></p-sortIcon>
                                             </th>
-                                            <th class="reconciliation-cell" scope="col">
-                                                {{"Reconciliation Type" | localize}}    
+                                            <th class="reconciliation-cell" scope="col" pSortableColumn="ReconciliationType">
+                                                {{"Reconciliation Type" | localize}}  
+                                                <p-sortIcon field="ReconciliationType"></p-sortIcon>  
                                             </th>
-                                            <th class="reconciliation-cell" scope="col">
+                                            <th class="reconciliation-cell" scope="col" pSortableColumn="Balance">
                                                 {{"Balance" | localize}}
+                                                <p-sortIcon field="Balance"></p-sortIcon>
                                             </th>
-                                            <th class="reconciliation-cell" scope="col">
+                                            <th class="reconciliation-cell" scope="col" pSortableColumn="TrialBalance">
                                                 {{"Trial Balance"}}
+                                                <p-sortIcon field="TrialBalance"></p-sortIcon>
                                             </th>
                                             <th class="assignee-cell" scope="col" pSortableColumn="AssigneeId">
                                                 {{"Assignee" | localize}}
