Account UI fixed

--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -180,7 +180,7 @@
                             </div>
                         </div>
                     </form>
-                    <div class="row drag_drop_box">
+                    <div class="row">
                         <div class="col-md-7 form-group">
                             <div class="pt-4">
                                 <label>{{"Instruction" | localize}}</label>
