--- a/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
+++ b/angular/src/app/main/account/accountsubtype/create-or-edit-accountsubtype/create-or-edit-accountsubtype.component.html
@@ -37,8 +37,8 @@
                         </div>
                         <div class="kt-portlet__head">
                         </div>
-                        <div  class="form-group margin-top-5"  [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')">
-                            <button [disabled]="accountSubtypeExist" class="btn btn-brand btn-width" type="submit">
+                        <div  class="form-group margin-top-5"  >
+                            <button [disabled]="accountSubtypeExist" [buttonBusy]="saving" [busyText]="l('SavingWithThreeDot')"class="btn btn-brand btn-width" type="submit">
                                 <i class="fa fa-save"></i>
                                 <span>{{"Save" | localize}}</span>
                             </button>
