--- a/angular/src/app/admin/settings/tenant-settings.component.html
+++ b/angular/src/app/admin/settings/tenant-settings.component.html
@@ -31,7 +31,7 @@
                                     defaultTimezoneScope="{{defaultTimezoneScope}}"></timezone-combo>
                             </div>
                         </tab>
-                       <!-- <div *ngIf="false">
+                        <div *ngIf="false">
                         <tab *ngIf="true" heading="{{'Appearance' | localize}}" [active]="activeTabIndex == 1">
                             <div class="row m-form">
                                 <div class="col-md-6">
@@ -194,9 +194,9 @@
                                 </label>
                             </div>
                         </tab>
-                        <tab *ngIf="true" heading="{{'Security' | localize}}">-->
+                        <tab *ngIf="true" heading="{{'Security' | localize}}">
                             <!-- *ngIf="true" is a workaround for https://github.com/valor-software/ng2-bootstrap/issues/823 -->
-                            <!--<div>
+                            <div>
                                 <h5>{{"PasswordComplexity" | localize}}</h5>
                                 <label for="Setting_PasswordComplexity_UseDefaultSettings" class="kt-checkbox">
                                     <input id="Setting_PasswordComplexity_UseDefaultSettings" type="checkbox"
@@ -438,9 +438,9 @@
                                 </div>
                             </div>
                         </tab>
-                        <tab *ngIf="true" heading="{{'Invoice' | localize}}">-->
+                        <tab *ngIf="true" heading="{{'Invoice' | localize}}">
                             <!-- *ngIf="true" is a workaround for https://github.com/valor-software/ng2-bootstrap/issues/823 -->
-                            <!--<h5>{{"InvoiceInformation" | localize}}</h5>
+                            <h5>{{"InvoiceInformation" | localize}}</h5>
                             <div class="form-group">
                                 <label for="LegalName">{{"LegalName" | localize}}</label>
                                 <input id="LegalName" type="text" autocomplete="off" name="legalName" class="form-control"
@@ -489,7 +489,7 @@
                                 </div>
                             </div>
                         </div>
-                        </tab> -->
+                        </tab> 
 
                     </tabset>
                 </div>
